change the height of the inner rss wrapper to prevent the text from being abruptly cut off

--- a/main-child.scss
+++ b/main-child.scss
@@ -178,7 +178,7 @@ div.rss_heading_wrapper{
             
             div.rss_item_inner{
                 overflow:hidden;
-                height:150px;
+                height:180px;
                 div.rss_hyperlink{
                     a.rss_feed{
                         font-family: "Open Sans",sans-serif;
